# waybar-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WARP.md  pyproject.toml  run-dev.sh
.serena/: project.yml
config/: waybar-module.jsonc
packaging/aur/waybar-toolkit-git/: .SRCINFO  PKGBUILD
scripts/: install.sh  start-serena.sh
tests/: test_process_backend_helpers.py  test_process_tree.py  test_waybar_config_backend.py  test_waybar_structured.py
waybar_toolkit/: __init__.py  app.py  main_window.py  waybar_gpu_module.py
waybar_toolkit/monitors/: backend.py  brightness.py  gpu_backend.py  identify.py  info.py  monitor_canvas.py  monitor_window.py  profiles.py
waybar_toolkit/processes/: backend.py  charts.py  process_window.py  tree.py  waybar_stats.py
waybar_toolkit/utils/: compositor.py
waybar_toolkit/waybar/: __init__.py  config_backend.py  structured.py  waybar_window.py
