[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waybar-toolkit"
version = "0.1.0"
description = "A Wayland utility hub with Waybar integration — monitor management and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "frantsiles"},
]
keywords = ["wayland", "hyprland", "waybar", "monitor", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Wayland",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PyGObject>=3.42",
]

[project.urls]
Homepage = "https://github.com/frantsiles/waybar-toolkit"
Repository = "https://github.com/frantsiles/waybar-toolkit"
Issues = "https://github.com/frantsiles/waybar-toolkit/issues"

[project.scripts]
waybar-toolkit = "waybar_toolkit.app:main"
waybar-toolkit-stats = "waybar_toolkit.processes.waybar_stats:main"

[tool.setuptools.packages.find]
include = ["waybar_toolkit*"]
