[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waybar-toolkit"
version = "0.3.1"
description = "A Wayland utility hub with Waybar integration — monitor management and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "frantsiles"},
]
keywords = ["wayland", "hyprland", "waybar", "monitor", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Wayland",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PyGObject>=3.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/frantsiles/waybar-toolkit"
Repository = "https://github.com/frantsiles/waybar-toolkit"
Issues = "https://github.com/frantsiles/waybar-toolkit/issues"

[project.scripts]
waybar-toolkit = "waybar_toolkit.app:main"
waybar-toolkit-stats = "waybar_toolkit.processes.waybar_stats:main"

[tool.setuptools.packages.find]
include = ["waybar_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
include = [
    "tests/**/*.py",
    "waybar_toolkit/processes/backend.py",
    "waybar_toolkit/processes/tree.py",
    "waybar_toolkit/monitors/backend.py",
    "waybar_toolkit/utils/compositor.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = [
    "waybar_toolkit/processes/backend.py",
    "waybar_toolkit/processes/tree.py",
    "waybar_toolkit/monitors/backend.py",
    "waybar_toolkit/utils/compositor.py",
    "tests",
]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
